--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -24,6 +24,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install doc_curation dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pikepdf
 
 #    - name: Lint with flake8
 #      run: |
